--- a/force-app/main/default/classes/AsyncTriggerHelper.cls
+++ b/force-app/main/default/classes/AsyncTriggerHelper.cls
@@ -1,4 +1,4 @@
-public with sharing class AsyncTriggerService {
+public with sharing class AsyncTriggerHelper {
 
     public static Map<Id,SObject> getRecordsMap(Set<Id> recordIds) {
 
@@ -32,15 +32,21 @@ public with sharing class AsyncTriggerService {
         Map<Id,EventBus.ChangeEventHeader> changeHeaderMap
     ) {
         Map<String,Map<Id,SObject>> recordsMapByContext = new Map<String,Map<Id,SObject>>();
-        // does not cover 'GAP_CREATE','GAP_UPDATE','GAP_DELETE','GAP_UNDELETE','GAP_OVERFLOW'
+        // does not cover 'GAP_OVERFLOW'
+        // very large changes to a database will throw overflow events. They will basically say
+        // that a large number of changes have happened to a table and you should resync the tables.
         for(String eventContext:new List<String>{'CREATE','UPDATE','DELETE','UNDELETE'}) {
             recordsMapByContext.put(eventContext, new Map<Id,SObject>());
         }
+
+        // In this paradigm, GAP and non-GAP events are handled the same way.
+        // GAP events are where a change is made at a system level (i.e. picklist value replace)
         for(EventBus.ChangeEventHeader ceh:changeHeaderMap.values()) {
             for(Id recordId:ceh.recordIds) {
-                recordsMapByContext.get(ceh.changeType).put(recordId, recordsMap.get(recordId));
+                recordsMapByContext.get(ceh.changeType.replace('GAP__','')).put(recordId, recordsMap.get(recordId));
             }
         }
+
         return recordsMapByContext;
     }
 
