Added debug, got it all working

--- a/force-app/main/default/classes/AccountWeatherService.cls
+++ b/force-app/main/default/classes/AccountWeatherService.cls
@@ -1,8 +1,9 @@
 public with sharing class AccountWeatherService {
 
-    public static void fromTrigger_getWeather(Map<Id,Account> accMap) {
+    public static void fromTrigger_getWeather(Map<Id,SObject> accMap) {
+        DebugLog.add('ENTERED AccountWeatherService.fromTrigger_getWeather');
         List<Async_Call__e> pes = new List<Async_Call__e>();
-        for(Account acc:accMap.values()) {
+        for(Account acc:(List<Account>)accMap.values()) {
             // checks if weather is blank to avoid recursion
             if(String.isBlank(acc.Weather__c) && (String.isNotBlank(acc.BillingCity) || String.isNotBlank(acc.ShippingCity))) {
                 pes.add(new Async_Call__e(
@@ -12,12 +13,18 @@ public with sharing class AccountWeatherService {
             }
         }
         if(!pes.isEmpty()) {
+            DebugLog.add(pes.size() + ' events published');
             EventBus.publish(pes);
+        } else {
+            DebugLog.add('no weather events to publish');
         }
+        DebugLog.add('EXIT AccountWeatherService.fromTrigger_getWeather');
     }
 
     @future(callout=true)
     public static void async_getWeather(Map<Id,String> mapAccId_City) {
+
+        DebugLog.add('START async_getWeather: ' + mapAccId_City.values().size() + ' records');
 
         List<Account> accs = new List<Account>();
 
@@ -33,6 +40,11 @@ public with sharing class AccountWeatherService {
 
         if(!accs.isEmpty()) {
             update accs;
+            DebugLog.add(accs.size() + ' accounts with weather data saved');
+        } else {
+            DebugLog.add('no accounts with weather data');
         }
+        DebugLog.add('END async_getWeather');
+        DebugLog.saveLog();
     }
 }
