--- a/force-app/main/default/classes/AsyncTriggerHelper.cls
+++ b/force-app/main/default/classes/AsyncTriggerHelper.cls
@@ -18,12 +18,21 @@ public with sharing class AsyncTriggerHelper {
             }
         }
 
-        for(SObject sob:(List<SObject>)Database.query(
-            'SELECT ' + String.join(new List<String>(fields),',') + ' WHERE ID IN:recordIds'
-        )) {
-            recordMap.put(sob.Id, sob);
+        try {
+            for(SObject sob:(List<SObject>)Database.query(
+                'SELECT ' + String.join(new List<String>(fields),',') + ' FROM ' + dsr.getName() + ' WHERE ID IN:recordIds'
+            )) {
+                recordMap.put(sob.Id, sob);
+            }
+            DebugLog.add('Number of ' +  dsr.getLabelPlural() + ' queried: ' + recordMap.values().size());
+            DebugLog.add(JSON.serialize(recordMap));
+        } catch (Exception e) {
+            DebugLog.add(
+                'ERROR: AsyncTriggerHelper.getRecordsMap' 
+                + '\n' + e.getMessage()
+                + '\n' + e.getStackTraceString()
+            );
         }
-
         return recordMap;
     }
 
@@ -66,7 +75,7 @@ public with sharing class AsyncTriggerHelper {
     }
 
     public static Map<Id,Set<String>> getFieldsChanged() {
- 
+
         Map<Id,Set<String>> fieldsChangedMap = new Map<Id,Set<String>>();
         EventBus.ChangeEventHeader ceh;
 
