Final debug clean-up removed unused method in AccountTriggerHandler

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -1,20 +1,22 @@
 public with sharing class AccountTriggerHandler {
 
     public static void afterInsert(Map<Id,Account> newMap) {
+        // for callout example
         AccountWeatherService.fromTrigger_getWeather(newMap);
+
+        // toggle switch to run "large calculation" asynchronously (CDC)
         if(!OrgSettings.demoSwitches.isAsync__c) {
             AccountingService.largeCalculation(newMap);
         }
     }
 
     public static void afterUpdate(Map<Id,Account> newMap) {
+        // example for callout
         AccountWeatherService.fromTrigger_getWeather(newMap);
+
+        // toggle switch to run "large calculation" asynchronously (CDC)
         if(!OrgSettings.demoSwitches.isAsync__c) {
             AccountingService.largeCalculation(newMap);
         }
-    }
-
-    public static void async_afterChange(Map<Id,Account> accMap, Map<Id,Set<String>> fieldsChangedMap) {
-        AccountingService.largeCalculation(accMap);
     }
 }
