Consolidated AsyncTriggerHelper to AsyncTriggerHandlerBase
Also renamed AsyncTriggerBase to AsyncTriggerHandlerBase

--- a/force-app/main/default/classes/Account_ATH.cls
+++ b/force-app/main/default/classes/Account_ATH.cls
@@ -1,4 +1,4 @@
-public with sharing class Account_ATH extends AsyncTriggerBase {
+public with sharing class Account_ATH extends AsyncTriggerHandlerBase {
 
     public override void isInsert(Map<Id,SObject> newMap) {
         AccountingService.largeCalculation(newMap);
