--- a/force-app/main/default/classes/Account_ATH.cls
+++ b/force-app/main/default/classes/Account_ATH.cls
@@ -4,7 +4,7 @@ public with sharing class Account_ATH extends AsyncTriggerHandlerBase {
         AccountingService.largeCalculation(newMap);
     }
 
-    public override void isUpdate(Map<Id,SObject> newMap) {
-        AccountingService.largeCalculation(newMap);
-    }
+    // public override void isUpdate(Map<Id,SObject> newMap) {
+    //     AccountingService.largeCalculation(newMap);
+    // }
 }
